--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,18 @@
 # Created by .ignore support plugin (hsz.mobi)
 /test/
 /.idea/
+### npm template
+.idea
+
+~ci.list.txt
+~ci.log.txt
+~ci.errors.txt
+
+*.stackdump
+*.bak
+*.old
+
+tsconfig.json
+package-lock.json
+
+test
